[package]
name = "rend3-imgui-example"
license = "MIT OR Apache-2.0 OR Zlib"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "imgui"
path = "src/main.rs"

[dependencies]
rend3 = { git = "https://github.com/MindSwipe/rend3" }
rend3-pbr = { git = "https://github.com/MindSwipe/rend3" }
winit = "0.23"
pollster = "0.2"
glam = "0.18"
log = "0.4"
env_logger = "0.9"
wgpu = "0.10"
imgui = "0.7"
imgui-winit-support = { version = "0.7", default-features = false, features = ["winit-23"] }
imgui-wgpu = "0.17"
wgpu-subscriber = "0.1"